--- a/basic/basic-layout-5.html
+++ b/basic/basic-layout-5.html
@@ -6,7 +6,39 @@
     <title>Basic Layout 5</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+       body{
+        flex-direction: column;
+        justify-content: center;
+       }
+       
+       header {
+        height:20vh;
+        width:60vw;
+        float:right;
+        margin: 0.5em;
+      }
+
+      nav {
+        height:20vh;
+        width:60vw;
+        float:left;
+        margin: 0.5em;
+      }
+
+      main {
+        height:20vh;
+        width:60vw;
+        float:right;
+        margin: 0.5em;
+      }
+
+      footer {
+        height:20vh;
+        width:60vw;
+        float:right;
+        margin: 0.5em;
+      }
+
     </style>
   </head>
   <body id="basic-layout-5">
