--- a/basic/basic-layout-1.html
+++ b/basic/basic-layout-1.html
@@ -8,7 +8,32 @@
     <style>
       body {
         display: grid;
+        grid-template-areas:
+        "header header"
+        "nav main"
+        "footer footer";
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: 1fr 4fr 0.5fr;
+        gap: 1em;
       }
+
+      header {
+        grid-area: header;
+      }
+
+      nav {
+        grid-area: nav;
+      }
+
+      main {
+        grid-area: main;
+      }
+
+      footer {
+        grid-area: footer;
+      }
+    
+
       /* Doe hier jouw ding! */
     </style>
   </head>
